--- a/ui.apps/pom.xml
+++ b/ui.apps/pom.xml
@@ -95,11 +95,36 @@
                             <artifactId>sling-context-test.core</artifactId>
                             <target>/apps/sling-context-test/install</target>
                         </embedded>
+                        <embedded>
+                            <groupId>io.wcm</groupId>
+                            <artifactId>
+                                io.wcm.caconfig.editor,
+                                io.wcm.caconfig.extensions
+                            </artifactId>
+                            <target>/apps/sling-context-test/install</target>
+                        </embedded>
+                        <embedded>
+                            <groupId>
+                                org.apache.sling
+                            </groupId>
+                            <artifactId>
+                                org.apache.sling.caconfig.api,
+                                org.apache.sling.caconfig.spi,
+                                org.apache.sling.caconfig.impl,
+                                org.apache.sling.commons.johnzon
+                            </artifactId>
+                            <target>/apps/sling-context-test/install</target>
+                        </embedded>
                     </embeddeds>
                     <subPackages>
                         <subPackage>
                             <groupId>com.adobe.cq</groupId>
                             <artifactId>core.wcm.components.all</artifactId>
+                            <filter>true</filter>
+                        </subPackage>
+                        <subPackage>
+                            <groupId>io.wcm</groupId>
+                            <artifactId>io.wcm.caconfig.editor.package</artifactId>
                             <filter>true</filter>
                         </subPackage>
                     </subPackages>
@@ -158,6 +183,45 @@
         <dependency>
             <groupId>com.day.cq.wcm</groupId>
             <artifactId>cq-wcm-taglib</artifactId>
+        </dependency>
+
+        <!-- wcm.io Context-Aware Config -->
+        <dependency>
+            <groupId>io.wcm</groupId>
+            <artifactId>io.wcm.caconfig.editor.package</artifactId>
+            <type>zip</type>
+        </dependency>
+        <dependency>
+            <groupId>io.wcm</groupId>
+            <artifactId>io.wcm.caconfig.editor</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.wcm</groupId>
+            <artifactId>io.wcm.caconfig.extensions</artifactId>
+            <scope>compile</scope>
+        </dependency>
+
+        <!-- Sling Context-Aware Config -->
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.caconfig.api</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.caconfig.spi</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.caconfig.impl</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.commons.johnzon</artifactId>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
