--- a/pom.xml
+++ b/pom.xml
@@ -599,6 +599,41 @@
                 <artifactId>io.wcm.caconfig.editor.package</artifactId>
                 <type>zip</type>
             </dependency>
+            <!--<dependency>-->
+                <!--<groupId>io.wcm</groupId>-->
+                <!--<artifactId>io.wcm.caconfig.editor</artifactId>-->
+                <!--<version>1.3.2</version>-->
+            <!--</dependency>-->
+            <!--<dependency>-->
+                <!--<groupId>io.wcm</groupId>-->
+                <!--<artifactId>io.wcm.caconfig.extensions</artifactId>-->
+                <!--<version>1.3.0</version>-->
+            <!--</dependency>-->
+
+            <!--&lt;!&ndash; Sling Context-Aware Config &ndash;&gt;-->
+            <!--<dependency>-->
+                <!--<groupId>org.apache.sling</groupId>-->
+                <!--<artifactId>org.apache.sling.caconfig.api</artifactId>-->
+                <!--<version>1.1.2</version>-->
+            <!--</dependency>-->
+            <!--<dependency>-->
+                <!--<groupId>org.apache.sling</groupId>-->
+                <!--<artifactId>org.apache.sling.caconfig.spi</artifactId>-->
+                <!--<version>1.3.4</version>-->
+            <!--</dependency>-->
+            <!--<dependency>-->
+                <!--<groupId>org.apache.sling</groupId>-->
+                <!--<artifactId>org.apache.sling.caconfig.impl</artifactId>-->
+                <!--<version>1.4.14</version>-->
+            <!--</dependency>-->
+            <!--<dependency>-->
+                <!--<groupId>org.apache.sling</groupId>-->
+                <!--<artifactId>org.apache.sling.commons.johnzon</artifactId>-->
+                <!--<version>1.1.2</version>-->
+            <!--</dependency>-->
+
+
+            <!-- wcm.io Context-Aware Config -->
             <dependency>
                 <groupId>io.wcm</groupId>
                 <artifactId>io.wcm.caconfig.editor</artifactId>
@@ -614,22 +649,22 @@
             <dependency>
                 <groupId>org.apache.sling</groupId>
                 <artifactId>org.apache.sling.caconfig.api</artifactId>
-                <version>1.1.2</version>
+                <version>1.1.0</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.sling</groupId>
                 <artifactId>org.apache.sling.caconfig.spi</artifactId>
-                <version>1.3.4</version>
+                <version>1.3.2</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.sling</groupId>
                 <artifactId>org.apache.sling.caconfig.impl</artifactId>
-                <version>1.4.14</version>
+                <version>1.4.12</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.sling</groupId>
                 <artifactId>org.apache.sling.commons.johnzon</artifactId>
-                <version>1.1.2</version>
+                <version>1.1.0</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
