--- a/pom.xml
+++ b/pom.xml
@@ -595,47 +595,6 @@
             <!-- wcm.io Context-Aware Config -->
             <dependency>
                 <groupId>io.wcm</groupId>
-                <version>1.3.2</version>
-                <artifactId>io.wcm.caconfig.editor.package</artifactId>
-                <type>zip</type>
-            </dependency>
-            <!--<dependency>-->
-                <!--<groupId>io.wcm</groupId>-->
-                <!--<artifactId>io.wcm.caconfig.editor</artifactId>-->
-                <!--<version>1.3.2</version>-->
-            <!--</dependency>-->
-            <!--<dependency>-->
-                <!--<groupId>io.wcm</groupId>-->
-                <!--<artifactId>io.wcm.caconfig.extensions</artifactId>-->
-                <!--<version>1.3.0</version>-->
-            <!--</dependency>-->
-
-            <!--&lt;!&ndash; Sling Context-Aware Config &ndash;&gt;-->
-            <!--<dependency>-->
-                <!--<groupId>org.apache.sling</groupId>-->
-                <!--<artifactId>org.apache.sling.caconfig.api</artifactId>-->
-                <!--<version>1.1.2</version>-->
-            <!--</dependency>-->
-            <!--<dependency>-->
-                <!--<groupId>org.apache.sling</groupId>-->
-                <!--<artifactId>org.apache.sling.caconfig.spi</artifactId>-->
-                <!--<version>1.3.4</version>-->
-            <!--</dependency>-->
-            <!--<dependency>-->
-                <!--<groupId>org.apache.sling</groupId>-->
-                <!--<artifactId>org.apache.sling.caconfig.impl</artifactId>-->
-                <!--<version>1.4.14</version>-->
-            <!--</dependency>-->
-            <!--<dependency>-->
-                <!--<groupId>org.apache.sling</groupId>-->
-                <!--<artifactId>org.apache.sling.commons.johnzon</artifactId>-->
-                <!--<version>1.1.2</version>-->
-            <!--</dependency>-->
-
-
-            <!-- wcm.io Context-Aware Config -->
-            <dependency>
-                <groupId>io.wcm</groupId>
                 <artifactId>io.wcm.caconfig.editor</artifactId>
                 <version>1.3.2</version>
             </dependency>
@@ -644,7 +603,13 @@
                 <artifactId>io.wcm.caconfig.extensions</artifactId>
                 <version>1.3.0</version>
             </dependency>
-
+            <!-- wcm.io Context-Aware Config UI -->
+            <dependency>
+                <groupId>io.wcm</groupId>
+                <version>1.3.2</version>
+                <artifactId>io.wcm.caconfig.editor.package</artifactId>
+                <type>zip</type>
+            </dependency>
             <!-- Sling Context-Aware Config -->
             <dependency>
                 <groupId>org.apache.sling</groupId>
