--- a/ui.apps/pom.xml
+++ b/ui.apps/pom.xml
@@ -188,11 +188,6 @@
         <!-- wcm.io Context-Aware Config -->
         <dependency>
             <groupId>io.wcm</groupId>
-            <artifactId>io.wcm.caconfig.editor.package</artifactId>
-            <type>zip</type>
-        </dependency>
-        <dependency>
-            <groupId>io.wcm</groupId>
             <artifactId>io.wcm.caconfig.editor</artifactId>
             <scope>compile</scope>
         </dependency>
@@ -201,7 +196,12 @@
             <artifactId>io.wcm.caconfig.extensions</artifactId>
             <scope>compile</scope>
         </dependency>
-
+        <!-- wcm.io Context-Aware Config UI -->
+        <dependency>
+            <groupId>io.wcm</groupId>
+            <artifactId>io.wcm.caconfig.editor.package</artifactId>
+            <type>zip</type>
+        </dependency>
         <!-- Sling Context-Aware Config -->
         <dependency>
             <groupId>org.apache.sling</groupId>
